--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,10 +1,16 @@
-<h1>¡Hola!</h1>
+<h3>¡Hola!</h3>
 
 <p>
-    Para reiniciar tu password, haz click <a href="{{ url('app_reset_password', {token: resetToken.token}) }}"><b>aquí</b></a>.
+    Si usted ah solicitado restablecer la contraseña de su usuario, siga las instrucciones que se indican abajo.<br>
+    En caso de que usted no haya inicio el proceso para restablecer la contraseña no tenga en cuenta lo que se indica en este email.
+</p>
+<p>
+    Para restablecer tu password, haz click <a href="{{ url('app_reset_password', {token: resetToken.token}) }}"><b>aquí</b></a>.<br>
     El enlace expirará en: {{ tokenLifetime|date('g') }} hora(s).
 </p>
 
 <p>
-    Tribunal superior de Justicia - Secretaría de Informática - La Rioja
+    Atentamente<br>
+    Área Informática del Tribunal Superior de Justicia<br>
+    Provincia de La Rioja
 </p>
