--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,33 +1,21 @@
 {% extends 'base/index-alone.html.twig' %}
 
-{% block title %}Login | TSJ{% endblock %}
+{% block title %}Login | UTN{% endblock %}
 
 {% block contenido %}
 
-	<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-center" style="overflow: auto;">
-		<div class="row w-25" style="min-width:400px; min-height: 300px;">
-			<div class="d-none d-md-none d-lg-block col-lg-4 pr-1 pl-0">
+	<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-center " style="overflow: auto;">
+
+			<div class="col-md-12 col-lg-4 pb-2  ">
 				<div class="card h-100">
-					<div class="card-body cardToLogin">
-						<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
-							<img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="100">
-						</a>
-						<p style="font-size: 0.8rem;">
-							©{{ "now"|date("Y") }} </br> Tribunal Superior de Justicia
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-12 col-lg-8 pl-0 pr-0">
-				<div class="card h-100">
-					<h5 class="mt-4 mb-0" style="color: black;font-weight: 600;">{{ site_name }}</h5>	
+					<h1 class="mt-5 mb-2" style="color: #353535;font-weight: 600; font-family:'Jost', sans-serif; color:" >{{ site_name }}</h1>	
 					<div class="card-body pt-0">											
 						<form method="post" class="cardToLogin h-100">						
-							<div class="mt-3 mb-3 w-100">
+							<div class="mt-3 mb-2 w-100 px-4">
 								<span>Usuario:</span>
 								<input type="text" value="{{ last_username }}" name="username" id="inputText" class="form-control inputLoggin" required autofocus>
 							</div>
-							<div class="mb-3 w-100">
+							<div class="mb-2 w-100 px-4">
 								<span>Contraseña:</span>
 								<input type="password" name="password" id="inputPassword" class="form-control inputLoggin" required>
 								<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
@@ -35,11 +23,11 @@
 							<div>
 								<a class="reset_pass mt-3" href="{{path('app_forgot_password_request')}}">¿Olvidó su contraseña?</a>
 							</div>
-							<div class="w-100 pb-3">
+							<div class="w-100 pb-1 px-4"  >
 								<button class="btn btn-success submit mt-3 inputLoggin w-100" href="index.html">Ingresar</button>
 							</div>
-							<p style="font-size: 0.8rem;">
-								Función Judicial </br> <b>Provincia de La Rioja</b>
+							<p class="pt-1 pb-0"style="font-size: 0.8rem;">
+								<b>UTN</b> </br> Facultad Regional </br> <b>Provincia de La Rioja</b>
 							</p>
 							<div class="clearfix"></div>
 							{% if error %}
@@ -49,7 +37,21 @@
 					</div>
 				</div>
 			</div>
-		</div>			
+		<div class="row w-25" style="min-width:504px; min-height: 100px;">
+			<div class="d-none d-md-none d-lg-block col-lg-3. pr-1 pl-0">
+				<div class="card h-100">
+					<div class="card-body cardToLogin" >
+						<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
+							<img id="logo-side" class="logo-side " src="{{ asset('base/img/logo.png') }}" alt="UTN" width="60">
+						</a>
+						<p style="font-size: 0.7rem; padding: 0 10px 0 10px ;">
+							©{{ "now"|date("Y") }} </br> Publisher Manrique Lucas
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+					
 	</div>
 
 {% endblock %}
