--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -46,7 +46,9 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>&copy; 2021 &nbsp; Tribunal Superior de Justicia - Dirección de Informática - La Rioja</span>
+                    <span>&copy; {{ "now"|date("Y") }} -&nbsp;Nombre de la empresa - La Rioja</span>
+                    
+                        {# <span>&copy; 2021 &nbsp; - La Rioja</span> #}
                     </div>
                 </div>
             </footer>
