--- a/templates/base/side-menu.html.twig
+++ b/templates/base/side-menu.html.twig
@@ -1,7 +1,7 @@
 {# Logo Top #}
 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
     <div class="sidebar-brand-icon">
-        <img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="80">
+        <img id="logo-side" class="logo-side" src="{{ asset('base/img/utnicon.png') }}" alt="UTN" width="120">
     </div>
 </a>
 <hr class="sidebar-divider my-0">
