--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -9,10 +9,10 @@
 				<div class="card h-100">
 					<div class="card-body cardToLogin">
 						<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
-							<img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="100">
+							<img id="logo-side" class="logo-side" src="{{ asset('base/img/logoutn.png') }}" alt="UTN" width="80">
 						</a>
-						<p style="font-size: 0.8rem;">
-							©{{ "now"|date("Y") }} </br> Tribunal Superior de Justicia
+						<p style="font-size: 0.7rem;">
+							©{{ "now"|date("Y") }} </br> <b> UTN </b> Facultad Regional </br>La Rioja
 						</p>
 					</div>
 				</div>
