--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -11,6 +11,6 @@
 
 <p>
     Atentamente<br>
-    Área Informática del Tribunal Superior de Justicia<br>
+    Área de Desarrollo --------<br>
     Provincia de La Rioja
 </p>
