--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,7 +26,7 @@
 							<div class="w-100 pb-1 px-4"  >
 								<button class="btn btn-success submit mt-3 inputLoggin w-100" href="index.html">Ingresar</button>
 							</div>
-							<p class="pt-1 pb-0"style="font-size: 0.8rem;">
+							<p class="pt-1 pb-0"style="font-size: 0.7rem;">
 								<b>UTN</b> </br> Facultad Regional </br> <b>Provincia de La Rioja</b>
 							</p>
 							<div class="clearfix"></div>
@@ -42,7 +42,7 @@
 				<div class="card h-100">
 					<div class="card-body cardToLogin" >
 						<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
-							<img id="logo-side" class="logo-side " src="{{ asset('base/img/logo.png') }}" alt="UTN" width="60">
+							<img id="logo-side" class="logo-side " src="{{ asset('base/img/logoutn.png') }}" alt="UTN" width="80">
 						</a>
 						<p style="font-size: 0.7rem; padding: 0 10px 0 10px ;">
 							©{{ "now"|date("Y") }} </br> Publisher Manrique Lucas
