--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="icon" href="{{ asset('base/img/favicon.ico') }}" type="image/ico" />
+        <link rel="icon" href="{{ asset('base/img/iconoutn.ico') }}" type="image/ico" />
 
-        <title>{% block title %}Inicio{% endblock %} | TSJ</title>
+        <title>{% block title %}Inicio{% endblock %} | UTN</title>
 
         <link href="{{ asset('base/css/sb-admin-2.min.css') }}" rel="stylesheet">
         <link href="{{ asset('base/vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
