--- a/templates/base/index-alone.html.twig
+++ b/templates/base/index-alone.html.twig
@@ -9,9 +9,9 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<link rel="icon" href="{{ asset('base/img/favicon.ico') }}" type="image/ico" />
+		<link rel="icon" href="{{ asset('base/img/iconoutn.ico') }}" type="image/ico" />
 
-		<title>{% block title %}{% endblock %} | TSJ</title>
+		<title>{% block title %}{% endblock %} | UTN</title>
 
 		<link href="{{ asset('base/vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
 		<link
