--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -37,7 +37,7 @@
 
 			</div>
 			{% for message in app.flashes('reset_password_error') %}
-				<div class="alert alert-danger alert-dismissible fade show mt-2 px-8">
+				<div class="alert alert-danger alert-dismissible fade show mt-3" style="min-width:455px;">
 					{{ message }}
 					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				</div>
