--- a/templates/base/side-menu.html.twig
+++ b/templates/base/side-menu.html.twig
@@ -1,9 +1,12 @@
 {# Logo Top #}
-<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
-    <div class="sidebar-brand-icon">
-        <img id="logo-side" class="logo-side" src="{{ asset('base/img/utnicon.png') }}" alt="UTN" width="120">
-    </div>
-</a>
+<li class="nav-link sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
+        <div class="sidebar-brand-icon">
+            <h1> <a class="mt-2 mb-2" style="color: #ffffff; font-weight: 630; font-family: 'Jost', sans-serif; text-decoration: none" href="{{ path('inicio_index') }}">{{ site_name }}</h1>
+		    <img id="logo-side" class="logo-side" src="{{ asset('base/img/utnicon.png') }}" alt="UTN" width="50">
+
+        </div>
+</li>
+
 <hr class="sidebar-divider my-0">
 
 {# Menú Side #}
@@ -22,11 +25,36 @@
         </a>
     </li>
 {% endif %}
+
 <!-- Expediente -->
 
 <!-- Divider -->
 <hr class="sidebar-divider my-0">
 
+{% if is_granted('VER_INICIO') %}
+    {# Archivos #}
+    <li class="nav-item {{ currentPath in 'index_personal' ? 'active' : '' }}">
+        <a class="nav-link collapsed" data-bs-toggle="collapse" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+            <i class="fa fa-file"></i>
+            <span>Archivos</span>
+        </a>
+        <div id="collapseThree" class="collapse">
+            <div class="bg-white py-2 collapse-inner rounded">
+                {% if is_granted('USERS_VER') %}
+                    <a class="collapse-item" href="{{ path('app_admin_users') }}">
+                        <i class="fa fa-user text-gray-600"></i> &nbsp; Personal
+                    </a>
+                {% endif %}
+                {% if is_granted('USERS_VER') %}
+                    <a class="collapse-item" href="{{ path('app_admin_users') }}">
+                        <i class="fa fa-user text-gray-600"></i> &nbsp; Clientes
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+    </li>
+    <hr class="sidebar-divider my-0">
+{% endif %}
 {% if is_granted('ADMINISTRACION') %}
     {# Administración #}
     <li class="nav-item {{ currentPath in opciones ? 'active' : '' }}">
@@ -54,4 +82,25 @@
             </div>
         </div>
     </li>
+
 {% endif %}
+
+
+{# {% if is_granted('VER_INICIO') %}
+    <li class="nav-item {{currentPath == 'index_personal' ? 'active' : '' }}">
+        <a class="nav-link" href="{{ path('app_admin_index') }}">        
+            <i class="fas fa-box-open me-2"></i>
+            <span></span>
+        </a>
+            {% if is_granted('USERS_VER') %}
+                <a class="collapse-item" href="{{ path('app_login') }}">
+                    <i class="fa fa-user text-gray-600"></i> &nbsp; Personal
+                </a>
+                <a class="collapse-item" href="{{ path('app_login') }}">
+                    <i class="fa fa-list-alt text-gray-600"></i> &nbsp; Clientes
+                </a>
+        {% endif %}
+    </li>
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+{% endif %} #}
