--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,10 +5,9 @@
 {% block contenido %}
 
 	<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-center " style="overflow: auto;">
-
-			<div class="col-md-12 col-lg-4 pb-2  ">
+		<div class="row w-30 col-md-12 col-lg-4 pb-2 mx-4 ">
 				<div class="card h-100">
-					<h1 class="mt-5 mb-2  " style="color: #353535;font-weight: 600; font-family:'Jost', sans-serif; color:" > {{ site_name }} </h1>	
+					<h1 class="mt-5 mb-2  " style="color: #353535;font-weight: 650; font-size: 80px; font-family:'Jost', sans-serif; color:" > {{ site_name }} </h1>	
 					<div class="card-body pt-0">											
 						<form method="post" class="cardToLogin h-1000">						
 							<div class="mt-3 mb-2 w-100 px-5">
@@ -37,14 +36,15 @@
 					</div>
 				</div>
 			</div>
-		<div class="row w-25" style="min-width:665px; min-height: 100px;">
-			<div class="d-none d-md-none d-lg-block col-lg-3. pr-1 pl-0">
+
+
+			<div class="d-none d-md-none d-lg-block col-lg-4 pr-1 pl-0">
 				<div class="card h-100">
 					<div class="card-body cardToLogin" >
 						<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
 							<img id="logo-side" class="logo-side" src="{{ asset('base/img/logoutn.png') }}" alt="UTN" width="80">
 						</a>
-						<p style="font-size: 0.7rem; padding: 0 10px 0 10px ;">
+						<p style="font-size: 0.7rem; ">
 							©{{ "now"|date("Y") }} </br> Publisher Manrique Lucas
 						</p>
 					</div>
